@@ -1,3 +1,11 @@
+2006-11-10 Jens Tkotz <jens@peino.de> 1.6-alpha3-svn-b11
+
+ * Fix: Include CSS in random-block and feature-block (if not already done).
+
+ * Change: Center content of random-block and feature-block.
+
+ * Fix: setup/ghcc.php
+
 2006-11-05 Jens Tkotz <jens@peino.de> 1.6-alpha3-svn-b10
 
  * Fix: Links to other method in slideshow were missing.
